# dapr-grpc-proxy

./: .gitignore  README.md  dapr1.yaml  dapr2.yaml
invoker/: invoke-caller.py  pyproject.toml
invoker/grpc_types/: service_pb2.py  service_pb2.pyi
receiver/: invoke-receiver.py  pyproject.toml
receiver/grpc_types/: service_pb2_grpc.py
receiver/protos/: service.proto
